# spreewald_fischmonitor

./: .gitignore  README.md  presets.json  pyproject.toml
docs/: .gitignore  README.md  index.html  make_clip.sh
docs/clips/: manuell_pos1.json
site/: README.md  index.html
site/clips/: tracked_pos2.json
src/fischzaehler/: __init__.py  activity.py  background.py  detect.py  enhance.py  mark.py  scale.py  track.py
tests/: test_smoke.py
