[project]
name = "fischzaehler"
version = "0.1.0"
description = "Erkennung und Zählung von Fischen in Unterwasser-Videoaufnahmen einer stillstehenden 360°-Kamera"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Sebastian Zug", email = "sebastian.zug@informatik.tu-freiberg.de" },
]
dependencies = [
    "numpy>=1.24",
    "opencv-python>=4.8",
]

[project.scripts]
fisch-detect = "fischzaehler.detect:main"
fisch-track = "fischzaehler.track:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fischzaehler"]
